[package]
name = "nioruntime"
version = "0.0.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.nio", "**/*.nio"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["libnio", "kqueues", "util"]

[dependencies]

nioruntime_util = { path = "./util" }
nioruntime_kqueues = { path = "./kqueues" }
nioruntime_libnio = { path = "./libnio" }

clap = { version = "2.33", features = ["yaml"] }
lazy_static = "1.4.0"

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

