[package]
name = "nioruntime"
version = "0.0.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.nio", "**/*.nio"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["log", "http", "eventhandler", "util", "error"]

[dependencies]

nioruntime_log  = { path = "./log"          }
nioruntime_http = { path = "./http"         }
nioruntime_util = { path = "./util"         }
nioruntime_evh  = { path = "./eventhandler" }
nioruntime_err  = { path = "./error"        }

ws2_32-sys = "0.2.1"
errno = "0.2.7"
libc = "^0.2.17"
nix = "0.22.0"
rand = "0.8.4"
byte-tools = "0.3.1"
byteorder = "1.4.2"
rustls-pemfile = "0.2.0"
rustls = "0.20.0-beta1"
native-tls = "0.2.8"


clap = { version = "2.33", features = ["yaml"] }
lazy_static = "1.4.0"

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

