[package]
name = "nioruntime_evh"
version = "0.0.1"
authors = ["BMW Developers"]
description = "Event handling library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[target.'cfg(target_os = "macos")'.dependencies]
kqueue-sys = "1.0.2"

[dependencies]

nix = "0.22.0"
libc = "^0.2.17"
rand = "0.6.5"

nioruntime_libnio = { path = "../libnio" }
nioruntime_util = { path = "../util" }


