[package]
name = "nioruntime_evh"
version = "0.0.1"
authors = ["BMW Developers"]
description = "Event handling library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[target.'cfg(target_os = "macos")'.dependencies]
kqueue-sys = "1.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
wepoll-sys = "2.0"

[dependencies]

winapi = "0.2.8"
portpicker = "0.1.1"
ws2_32-sys = "0.2.1"
nix = "0.22.0"
errno = "0.2.7"
libc = "^0.2.17"
rand = "0.8.4"
futures = "0.3.0"

nioruntime_util = { path = "../util" }
nioruntime_log  = { path = "../log"  }

