[package]
name = "nioruntime_fdhandler"
version = "0.0.1"
authors = ["BMW Developers"]
description = "fdhandler library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nix = "0.22.0"
libc = "^0.2.17"

nioruntime_util = { path = "../util" }
