[package]
name = "nioruntime_kqueues"
version = "0.0.1"
authors = ["BMW Developers"]
description = "kqueues library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]
kqueue-sys = "^1.0.1"
nix = "0.22.0"
libc = "^0.2.17"

nioruntime_libnio = { path = "../libnio" }
nioruntime_util = { path = "../util" }
