[package]
name = "nioruntime_kqueues"
version = "0.0.1"
authors = ["BMW Developers"]
description = "kqueues library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]
kqueue-sys = { git = "https://gitlab.com/snape479/rust-kqueue-sys", branch = "master" }
#kqueue-sys = { path = "../../rust-kqueue-sys" }
nix = "0.22.0"
libc = "^0.2.17"
rand = "0.6.5"

nioruntime_libnio = { path = "../libnio" }
nioruntime_util = { path = "../util" }
