[package]
name = "nioruntime_libnio"
version = "0.0.1"
authors = ["BMW Developers"]
description = "library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]
async-std = "1.9.0"

nioruntime_util = { path = "../util" }
